tests/rosetta/out/Java/calkin-wilf-sequence.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/calkin-wilf-sequence.mochi:8:21: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/calkin-wilf-sequence.mochi:8:21

  8 |     var prev = seq[i-1]
    |                     ^

help:
  Parse error occurred. Check syntax near this location.